--- a/CourseManagementSystem.API/CourseManagementSystem.API.csproj
+++ b/CourseManagementSystem.API/CourseManagementSystem.API.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\DAL\CourseManagementSystem.Data.csproj" />
+    <ProjectReference Include="..\CourseManagementSystem.Data\CourseManagementSystem.Data.csproj" />
   </ItemGroup>
 
 
