added CRUD methods in StudentsController

--- a/CourseManagementSystem.API/CourseManagementSystem.API.csproj
+++ b/CourseManagementSystem.API/CourseManagementSystem.API.csproj
@@ -8,5 +8,9 @@
     <ProjectReference Include="..\CourseManagementSystem.Data\CourseManagementSystem.Data.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="ViewModels\" />
+  </ItemGroup>
+
 
 </Project>
