--- a/CourseManagementSystem.API/Properties/launchSettings.json
+++ b/CourseManagementSystem.API/Properties/launchSettings.json
@@ -1,26 +1,23 @@
 ﻿{
-  "$schema": "http://json.schemastore.org/launchsettings.json",
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:61349",
-      "sslPort": 44319
+      "applicationUrl": "http://localhost:64208",
+      "sslPort": 44335
     }
   },
   "profiles": {
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "api/students",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "LearningCourseManagementSystem": {
+    "CourseManagementSystem.API": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "api/students",
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
