--- a/CourseManagementSystem.API/appsettings.json
+++ b/CourseManagementSystem.API/appsettings.json
@@ -1,10 +1,20 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-CourseManagementSystem.API-53bc9b9d-9d6a-45d4-8429-2a2761773502;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
-    "LogLevel": {
+      "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
+      }
+    },
+  "IdentityServer": {
+    "Clients": {
+      "CourseManagementSystem.API": {
+        "Profile": "IdentityServerSPA"
+      }
     }
   },
-  "AllowedHosts": "*"
+"AllowedHosts": "*"
 }
