--- a/CourseManagementSystem.API/CourseManagementSystem.API.csproj
+++ b/CourseManagementSystem.API/CourseManagementSystem.API.csproj
@@ -35,6 +35,10 @@
     <Compile Remove="Data\Migrations\20200921194614_Entities_changed.Designer.cs" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CourseManagementSystem.Data\CourseManagementSystem.Data.csproj" />
+  </ItemGroup>
+
   <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
     <!-- Ensure Node.js is installed -->
     <Exec Command="node --version" ContinueOnError="true">
