added separate project for services

--- a/CourseManagementSystem.API/CourseManagementSystem.API.csproj
+++ b/CourseManagementSystem.API/CourseManagementSystem.API.csproj
@@ -32,6 +32,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\CourseManagementSystem.Data\CourseManagementSystem.Data.csproj" />
+    <ProjectReference Include="..\CourseManagementSystem.Services\CourseManagementSystem.Services.csproj" />
   </ItemGroup>
 
   <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
