TestScoreCalculator tests added

--- a/CourseManagementSystem.UnitTests/CourseManagementSystem.UnitTests.csproj
+++ b/CourseManagementSystem.UnitTests/CourseManagementSystem.UnitTests.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\CourseManagementSystem.Data\CourseManagementSystem.Data.csproj" />
+    <ProjectReference Include="..\CourseManagementSystem.Services\CourseManagementSystem.Services.csproj" />
   </ItemGroup>
 
 </Project>
