--- a/CourseManagementSystem.API/ClientApp/package.json
+++ b/CourseManagementSystem.API/ClientApp/package.json
@@ -26,6 +26,7 @@
     "bootstrap": "^4.5.2",
     "core-js": "^3.6.5",
     "jquery": "^3.5.1",
+    "ngx-bootstrap": "^5.6.2",
     "oidc-client": "^1.9.1",
     "popper.js": "^1.16.0",
     "rxjs": "^6.6.3",
