--- a/.github/workflows/angular.yml
+++ b/.github/workflows/angular.yml
@@ -12,10 +12,13 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./CourseManagementSystem.API/ClientApp
 
     strategy:
       matrix:
-        node-version: [10.x, 12.x, 14.x, 15.x]
+        node-version: [12.x, 14.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
@@ -24,8 +27,6 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
-      - name: Navigate to project folder
-        run: cd CourseManagementSystem.API/ClientApp
       - name: Install dependencies
         run: npm ci
       - name: Build
