--- a/CourseManagementSystem.API/ClientApp/package.json
+++ b/CourseManagementSystem.API/ClientApp/package.json
@@ -25,6 +25,7 @@
     "aspnet-prerendering": "^3.0.1",
     "bootstrap": "^4.5.2",
     "core-js": "^3.6.5",
+    "file-saver": "^2.0.5",
     "jquery": "^3.5.1",
     "ngx-bootstrap": "^5.6.2",
     "oidc-client": "^1.9.1",
@@ -37,6 +38,7 @@
     "@angular/cli": "^8.3.29",
     "@angular/compiler-cli": "^8.2.14",
     "@angular/language-service": "^8.2.14",
+    "@types/file-saver": "^2.0.2",
     "@types/jasmine": "~3.4.4",
     "@types/jasminewd2": "~2.0.8",
     "@types/node": "~12.11.6",
