unit tests folder name changed

--- a/CourseManagementSystem.TestEvaluation.Tests/CourseManagementSystem.TestEvaluation.Tests.csproj
+++ b/CourseManagementSystem.TestEvaluation.Tests/CourseManagementSystem.TestEvaluation.Tests.csproj
@@ -15,7 +15,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\CourseManagementSystem.Data\CourseManagementSystem.Data.csproj" />
-    <ProjectReference Include="..\CourseManagementSystem.Services\CourseManagementSystem.Services.csproj" />
+    <ProjectReference Include="..\CourseManagementSystem.TestEvaluation\CourseManagementSystem.TestEvaluation.csproj" />
   </ItemGroup>
 
 </Project>
